plugins {
    id "com.android.application"
}

android {
    namespace = "hu.kdea.szavazas"
    compileSdk = 34

    defaultConfig {
        applicationId = "hu.kdea.szavazas"
        minSdk = 24
        targetSdk = 34
        versionCode = 1
        versionName = "1.0"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles(
                getDefaultProguardFile("proguard-android-optimize.txt"),
                "proguard-rules.pro"
            )
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    packaging {
        resources {
            pickFirsts.add("META-INF/sisu/javax.inject.Named")
        }
    }
}

// Configure JVM unit test runtime to use the Java desktop module when available.
tasks.withType(Test).configureEach {
    jvmArgs("--add-modules", "java.desktop")
}

dependencies {
    implementation project(":konveyor")
    implementation project(":szavazas-core")
    implementation libs.dagger
    implementation libs.javax.inject
    annotationProcessor libs.dagger.compiler

    // BoofCV for all image processing
    implementation "org.boofcv:boofcv-android:1.2.0"
    implementation "org.boofcv:boofcv-core:1.2.0"
    implementation "org.boofcv:boofcv-geo:1.2.0"
    implementation "org.georegression:georegression:0.28.0"

    // CameraX
    implementation "androidx.camera:camera-core:1.3.0"
    implementation "androidx.camera:camera-camera2:1.3.0"
    implementation "androidx.camera:camera-lifecycle:1.3.0"
    implementation "androidx.camera:camera-view:1.3.0"

    // QR

    // AndroidX
    implementation "androidx.core:core-ktx:1.12.0"
    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "com.google.android.material:material:1.11.0"
    implementation "androidx.activity:activity:1.8.0"
    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
    implementation "org.json:json:20240303"

    // Unit testing – include boofcv classes and JVM dependencies
    testImplementation "junit:junit:4.13.2"
    testImplementation libs.junit.jupiter
    testImplementation "androidx.test:core:1.5.0"
    testImplementation "com.google.code.gson:gson:2.10.1"
    testImplementation "org.boofcv:boofcv-core:1.2.0"   // essential for ConvertBufferedImage
    testImplementation "org.boofcv:boofcv-geo:1.2.0"
    testImplementation "org.boofcv:boofcv-io:1.2.0"

    // Android instrumentation tests
    androidTestImplementation "androidx.test.ext:junit:1.1.5"
    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
}
